aw09: add CounterApi to pos-cart
